--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
     <div class="top-container">
         <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
-        <h1>I'm Luiz Valente.</h1>
-        <h2 class="">a computer engineer and a public servant.</h2>
+        <h1>Eu sou Luiz Valente.</h1>
+        <h2 class="">engenheiro de computação e servidor público federal.</h2>
         <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
         <img src="images/mountain.png" alt="mountain-img">
     </div>
