--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="top-container">
         <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
-        <h1>Eu sou Luiz Valente.</h1>
+        <h1>Luiz Valente.</h1>
         <h2 class="">engenheiro de computação e servidor público federal.</h2>
         <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
         <img src="images/mountain.png" alt="mountain-img">
