--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="profile">
             <img class="img-luiz" src="images/Luiz.png" alt="">
             <h2>Olá!</h2>
-            <p class="profile-description">Sou graduado em Engenharia da Computação pelo Instituto Militar de Engenharia(2005) <br>e tenho especialização em Criptografia e Segurança em Redes pela Universidade Federal Fluminense(2010).</p>
+            <p class="profile-description">Sou graduado em Engenharia da Computação pelo Instituto Militar de Engenharia(2005) e tenho especialização em Criptografia e Segurança em Redes pela Universidade Federal Fluminense(2010).</p>
         </div>
         <hr>
         <div class="skills">
@@ -67,10 +67,10 @@
     </div>
 
     <div class="bottom-container">
-      <a class="footer-link1" href="https://www.linkedin.com/in/luiz-valente-2b190039/">LinkedIn</a>
-      <a class="footer-link2" href="https://twitter.com/luiz_valente">Twitter</a>
-      <a class="footer-link3" href="http://lattes.cnpq.br/5557919355334099">Lattes</a>
-      <p class="nome-final">© 2023 Luiz Valente.</p>
+      <a class="footer-link" href="https://www.linkedin.com/in/luiz-valente-2b190039/">LinkedIn</a>
+      <a class="footer-link" href="https://twitter.com/luiz_valente">Twitter</a>
+      <a class="footer-link" href="http://lattes.cnpq.br/5557919355334099">Lattes</a>
+      <p class="copyright">© 2023 Luiz Valente.</p>
     </div>
 </body>
 </html>
