--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
             <div class="skill-row">
                 <img src="images/python.png" title="project manager icons" class="img-python" alt="python-image">
                 <h3>Programação Python</h3>
-                <p>Python é meu novo vício. Tenho me esforçado para aprender mais sobre essa fantástica linguagem com o objetivo de automatizar ao máximo as minhas tarefas repetitiva em casa e no trabalho.</p>
+                <p>Python é meu novo vício. Tenho estudado essa fantástica linguagem com o objetivo de automatizar ao máximo as minhas tarefas repetitivas em casa e no trabalho.</p>
             </div>
 
             <div class="skill-row">
                 <img src="images/r.png" title="project manager icons" class="img-r" alt="r-image">
                 <h3>Programação R</h3>
-                <p>O R é uma linguagem muito simples e fácil de utilizar. Já fiz um curso de Redes Neurais Profundas que era ministrado em R, o que me fez aprender a mexer melhor na ferramenta.</p>
+                <p>O R é uma linguagem muito simples e fácil de utilizar. Já fiz um curso de Redes Neurais Profundas que era ministrado em R, o que me fez aprender a mexer melhor na ferramenta. O proximo passo é dominar o Shiny.</p>
             </div>
 
             <div class="skill-row">
